--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -28,6 +28,7 @@ $bp-large: 1024px;
 $bp-medium: 992px;
 $bp-small: 768px;
 $bp-smallest: 577px;
+$bp-mobilelarge: 425px;
 $bp-mobile: 375px;
 
 $font-secondary: "Aileron", sans-serif;
