--- a/sass/components/_cta.scss
+++ b/sass/components/_cta.scss
@@ -185,6 +185,11 @@
     padding: 40px 16px;
   }
 
+  @media screen and (max-width: $bp-mobilelarge) {
+    padding: 64px 16px;
+    gap: 48px;
+  }
+
   .container {
     width: 100%;
   }
@@ -195,8 +200,13 @@
     justify-content: space-between;
     align-items: center;
     gap: 24px;
+
     @media (max-width: $bp-largest) {
       flex-wrap: wrap;
+    }
+
+    @media screen and (max-width: $bp-mobilelarge) {
+      gap: 48px;
     }
   }
 
