--- a/css/style.css
+++ b/css/style.css
@@ -2428,11 +2428,21 @@ h6 {
 .heroabout__main-content .content__headline .content__headline-title {
   width: 100%;
   max-width: 1043.67px;
-  font-size: 108px;
+  font-size: clamp(48px, 8vw, 108px);
   text-align: center;
   font-weight: 300;
   font-family: "IvyMode", sans-serif;
   color: #f2f6ef;
+}
+@media screen and (max-width: 1200px) {
+  .heroabout__main-content .content__headline .content__headline-title {
+    padding: 0px 32px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .heroabout__main-content .content__headline .content__headline-title {
+    padding: 0px 16px;
+  }
 }
 .heroabout__main-content .content__headline .content__headline-sub {
   width: 100%;
@@ -2442,6 +2452,16 @@ h6 {
   font-weight: 300;
   font-family: "IvyMode", sans-serif;
   color: #f2f6ef;
+}
+@media screen and (max-width: 1200px) {
+  .heroabout__main-content .content__headline .content__headline-sub {
+    padding: 0px 64px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .heroabout__main-content .content__headline .content__headline-sub {
+    padding: 0px 16px;
+  }
 }
 .heroabout__main-content .content__img {
   display: flex;
@@ -2454,12 +2474,36 @@ h6 {
   left: 64px;
   bottom: 92.15px;
 }
+@media screen and (max-width: 1350px) {
+  .heroabout__main .ilustrationsleft {
+    max-width: 256px;
+    width: 100%;
+    left: 160px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .heroabout__main .ilustrationsleft {
+    display: none;
+  }
+}
 .heroabout__main .ilustrationsright {
   position: absolute;
   width: 100%;
   max-width: 335px;
   left: 1041px;
   bottom: 92.15px;
+}
+@media screen and (max-width: 1350px) {
+  .heroabout__main .ilustrationsright {
+    max-width: 256px;
+    width: 100%;
+    left: 945px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .heroabout__main .ilustrationsright {
+    display: none;
+  }
 }
 
 .aboutus .container {
@@ -2486,6 +2530,21 @@ h6 {
   padding: 96px 80px 48px;
   gap: 36px;
 }
+@media screen and (max-width: 1200px) {
+  .aboutus__wrapper-content .content__velvety {
+    padding: 64px 32px 48px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .aboutus__wrapper-content .content__velvety {
+    padding: 64px 80px 48px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .aboutus__wrapper-content .content__velvety {
+    padding: 64px 16px 48px;
+  }
+}
 .aboutus__wrapper-content .content__velvety .velvety__headline {
   display: flex;
   flex-direction: column;
@@ -2495,9 +2554,19 @@ h6 {
   font-size: 28px;
   color: #738c71;
 }
+@media screen and (max-width: 425px) {
+  .aboutus__wrapper-content .content__velvety .velvety__headline-title {
+    font-size: 24px;
+  }
+}
 .aboutus__wrapper-content .content__velvety .velvety__headline-sub {
   font-size: 56px;
   color: #213721;
+}
+@media screen and (max-width: 425px) {
+  .aboutus__wrapper-content .content__velvety .velvety__headline-sub {
+    font-size: 40px;
+  }
 }
 .aboutus__wrapper-content .content__velvety .velvety__main {
   display: flex;
@@ -2505,10 +2574,34 @@ h6 {
   gap: 64px;
   align-items: center;
 }
+@media screen and (max-width: 1200px) {
+  .aboutus__wrapper-content .content__velvety .velvety__main {
+    gap: 48px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .aboutus__wrapper-content .content__velvety .velvety__main {
+    display: flex;
+    flex-direction: column;
+  }
+}
+.aboutus__wrapper-content .content__velvety .velvety__main-ilustration {
+  width: clamp(343px, 39.72vw, 572px);
+}
 .aboutus__wrapper-content .content__velvety .velvety__main .velety__main-container {
   display: flex;
   flex-direction: column;
   gap: 40px;
+}
+@media screen and (max-width: 1200px) {
+  .aboutus__wrapper-content .content__velvety .velvety__main .velety__main-container {
+    gap: 16px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .aboutus__wrapper-content .content__velvety .velvety__main .velety__main-container {
+    gap: 32px;
+  }
 }
 .aboutus__wrapper-content .content__velvety .velvety__main .velety__main-container .container__text {
   font-family: "Aileron", sans-serif;
@@ -2525,6 +2618,11 @@ h6 {
 .aboutus__wrapper-content .content__velvety .velvety__main .velety__main-container .container__quote-main {
   color: #496839;
 }
+@media screen and (max-width: 1200px) {
+  .aboutus__wrapper-content .content__velvety .velvety__main .velety__main-container .container__quote-main {
+    font-size: 32px;
+  }
+}
 .aboutus__wrapper-content .content__velvety .velvety__main .velety__main-container .container__quote-sub {
   font-family: "Aileron", sans-serif;
   font-size: 20px;
@@ -2539,14 +2637,33 @@ h6 {
   border-style: solid;
   border-color: #c8d8c0;
 }
+@media screen and (max-width: 1200px) {
+  .aboutus__wrapper-content .missionandvision {
+    padding: 0 32px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .aboutus__wrapper-content .missionandvision {
+    display: flex;
+    flex-direction: column;
+    padding: 0 80px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .aboutus__wrapper-content .missionandvision {
+    padding: 0px 16px;
+  }
+}
 .aboutus__wrapper-content .missionandvision .mission {
   display: flex;
   flex-direction: column;
   gap: 16px;
   padding: 48px 56px 48px 0;
-  border-width: 0px 1px 0px 0px;
-  border-style: solid;
-  border-color: #c8d8c0;
+}
+@media screen and (max-width: 768px) {
+  .aboutus__wrapper-content .missionandvision .mission {
+    padding: 48px 0;
+  }
 }
 .aboutus__wrapper-content .missionandvision .mission-icon {
   width: 48px;
@@ -2556,6 +2673,11 @@ h6 {
   font-size: 40px;
   font-weight: 300;
   line-height: 120%;
+}
+@media screen and (max-width: 425px) {
+  .aboutus__wrapper-content .missionandvision .mission-title {
+    font-size: 32px;
+  }
 }
 .aboutus__wrapper-content .missionandvision .mission-subtitle {
   font-family: "Aileron", sans-serif;
@@ -2568,6 +2690,11 @@ h6 {
   flex-direction: column;
   gap: 16px;
   padding: 48px 0 48px 56px;
+}
+@media screen and (max-width: 768px) {
+  .aboutus__wrapper-content .missionandvision .vision {
+    padding: 48px 0;
+  }
 }
 .aboutus__wrapper-content .missionandvision .vision-icon {
   width: 48px;
@@ -2597,12 +2724,22 @@ h6 {
   position: relative;
   padding: 96px 80px;
 }
+@media screen and (max-width: 425px) {
+  .explore__wrapper {
+    padding: 64px 16px;
+  }
+}
 .explore__content {
   display: flex;
   flex-direction: column;
   justify-content: center;
   position: relative;
   gap: 56px;
+}
+@media screen and (max-width: 425px) {
+  .explore__content {
+    gap: 56px;
+  }
 }
 .explore__content-headline {
   display: flex;
@@ -2626,10 +2763,21 @@ h6 {
   text-align: center;
   color: #213721;
 }
+@media screen and (max-width: 425px) {
+  .explore__content-headline .headline__sub {
+    font-size: 40px;
+    max-width: 343px;
+  }
+}
 .explore__content-slider {
   display: flex;
   flex-direction: column;
   gap: 24px;
+}
+@media screen and (max-width: 425px) {
+  .explore__content-slider {
+    gap: 28px;
+  }
 }
 .explore__content-slider .slider__title {
   display: flex;
@@ -2644,17 +2792,32 @@ h6 {
   font-family: "IvyMode", sans-serif;
   color: #213721;
 }
+@media screen and (max-width: 425px) {
+  .explore__content-slider .slider__title-head {
+    font-size: 32px;
+  }
+}
 .explore__content-slider .slider__title-navigation {
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 32px;
 }
+@media screen and (max-width: 425px) {
+  .explore__content-slider .slider__title-navigation {
+    display: none;
+  }
+}
 .explore__content-slider .slider__listing {
   display: flex;
   flex-direction: row;
   gap: 32px;
   overflow: auto;
+}
+@media screen and (max-width: 425px) {
+  .explore__content-slider .slider__listing {
+    gap: 16px;
+  }
 }
 .explore__content-slider .slider__listing::-webkit-scrollbar {
   display: none;
@@ -2664,9 +2827,25 @@ h6 {
   flex-direction: column;
   border: 1px solid #c8d8c0;
 }
+@media screen and (max-width: 425px) {
+  .explore__content-slider .slider__listing-product {
+    width: 200px;
+  }
+}
 .explore__content-slider .slider__listing .product__image {
   height: 100%;
   max-height: 320px;
+}
+@media screen and (max-width: 425px) {
+  .explore__content-slider .slider__listing .product__image {
+    width: 200px;
+    max-height: 210px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .explore__content-slider .slider__listing .product__image .img-row {
+    width: 200px;
+  }
 }
 .explore__content-slider .slider__listing .product__desc {
   display: flex;
@@ -2725,6 +2904,7 @@ h6 {
   align-items: center;
   align-self: center;
   gap: 10px;
+  cursor: pointer;
   width: 100%;
   height: 52px;
   max-width: 229.11px;
@@ -2756,6 +2936,17 @@ h6 {
   padding: 56px 80px;
   gap: 64px;
 }
+@media screen and (max-width: 768px) {
+  .value__content {
+    flex-direction: column;
+  }
+}
+@media screen and (max-width: 425px) {
+  .value__content {
+    padding: 56px 16px;
+    gap: 32px;
+  }
+}
 .value__content .value__item {
   display: flex;
   flex-direction: column;
@@ -2780,11 +2971,22 @@ h6 {
   text-align: center;
   color: #e4ece0;
 }
+@media screen and (max-width: 768px) {
+  .value__content .value__item-desc .desc__sub {
+    width: 100%;
+    max-width: 343px;
+  }
+}
 .value__content .sparation {
   flex: 0 0 1px;
   height: 88px;
   background: #c8d8c0;
   align-self: center;
+}
+@media screen and (max-width: 768px) {
+  .value__content .sparation {
+    width: 343px;
+  }
 }
 
 .team .container {
@@ -2799,6 +3001,11 @@ h6 {
   position: relative;
   padding: 96px 80px;
 }
+@media screen and (max-width: 425px) {
+  .team__wrapper {
+    padding: 64px 16px;
+  }
+}
 .team__content {
   display: flex;
   flex-direction: column;
@@ -2806,17 +3013,28 @@ h6 {
   position: relative;
   gap: 56px;
 }
+@media screen and (max-width: 425px) {
+  .team__content {
+    gap: 48px;
+  }
+}
 .team__content .team__headline {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 16px;
 }
 .team__content .team__headline-main {
   font-size: 28px;
   font-weight: 300;
   line-height: 110%;
   color: #899f87;
+}
+@media screen and (max-width: 425px) {
+  .team__content .team__headline-main {
+    font-size: 24px;
+  }
 }
 .team__content .team__headline-sub {
   font-size: 56px;
@@ -2828,10 +3046,20 @@ h6 {
   max-width: 669.75px;
   color: #213721;
 }
+@media screen and (max-width: 425px) {
+  .team__content .team__headline-sub {
+    font-size: 40px;
+  }
+}
 .team__content .team__container {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 32px;
+}
+@media screen and (max-width: 425px) {
+  .team__content .team__container {
+    gap: 52px;
+  }
 }
 .team__content .team__container-row {
   display: flex;
@@ -2847,12 +3075,16 @@ h6 {
   display: flex;
   flex-direction: column;
   gap: 12px;
-  /* Garis vertikal */
 }
 .team__content .team__container-row .team__card-name .name {
   font-size: 30px;
   line-height: 120%;
   color: #213721;
+}
+@media screen and (max-width: 425px) {
+  .team__content .team__container-row .team__card-name .name {
+    font-size: 24px;
+  }
 }
 .team__content .team__container-row .team__card-name .contain {
   display: flex;
@@ -2909,6 +3141,11 @@ h6 {
   overflow: hidden;
   transition: max-height 0.4s ease, opacity 0.3s ease;
 }
+@media screen and (max-width: 425px) {
+  .team__content .team__container-row .team__card .team__card-desc {
+    gap: 16px;
+  }
+}
 .team__content .team__container-row .team__card .team__card-desc .desc-title {
   font-size: 16px;
   font-weight: 400;
@@ -2926,7 +3163,7 @@ h6 {
 }
 .team__content .team__container-row .team__card .team__card-desc.show {
   margin-bottom: 0;
-  max-height: 500px; /* cukup besar untuk muat isi */
+  max-height: 500px;
   opacity: 1;
 }
 .team__content .team__container-row .team__card .sparation {
@@ -2946,17 +3183,45 @@ h6 {
 .stats__wrapper {
   padding: 48px 128px;
 }
+@media screen and (max-width: 577px) {
+  .stats__wrapper {
+    padding: 48px 16px;
+  }
+}
 .stats__content {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  gap: 32px;
+}
+@media screen and (max-width: 768px) {
+  .stats__content {
+    flex-direction: column;
+  }
+}
+.stats__content .stats__content-col {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  max-width: 501px;
 }
 .stats__content .stat__item {
   display: flex;
   flex-direction: column;
   gap: 8px;
   justify-items: center;
+  align-self: center;
+  width: 100%;
+  max-width: 250px;
+}
+@media screen and (max-width: 768px) {
+  .stats__content .stat__item {
+    padding: 24px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .stats__content .stat__item {
+    padding: 0;
+  }
 }
 .stats__content .stat__item-main {
   font-size: 56px;
@@ -2972,6 +3237,8 @@ h6 {
   font-size: 16px;
   font-weight: 400;
   line-height: 140%;
+  align-self: center;
+  text-align: center;
   color: #e4ece0;
 }
 .stats__content .sparation__stat {
@@ -2979,6 +3246,12 @@ h6 {
   height: 88px;
   background: #c8d8c0;
   align-self: center;
+}
+@media screen and (max-width: 768px) {
+  .stats__content .sparation__stat {
+    width: 100%;
+    height: 200px;
+  }
 }
 
 .blogs .container {
@@ -2988,6 +3261,11 @@ h6 {
 }
 .blogs__wrapper {
   padding: 96px 80px;
+}
+@media screen and (max-width: 425px) {
+  .blogs__wrapper {
+    padding: 64px 16px;
+  }
 }
 .blogs__content {
   display: flex;
@@ -3010,17 +3288,32 @@ h6 {
   line-height: 110%;
   color: #899f87;
 }
+@media screen and (max-width: 425px) {
+  .blogs__content .blogs__content-headline .headline__title-main {
+    font-size: 24px;
+  }
+}
 .blogs__content .blogs__content-headline .headline__title-sub {
   font-size: 56px;
   line-height: 120%;
   letter-spacing: 1%;
   color: #213721;
 }
+@media screen and (max-width: 425px) {
+  .blogs__content .blogs__content-headline .headline__title-sub {
+    font-size: 40px;
+  }
+}
 .blogs__content .blogs__content-headline .slider__title-navigation {
   display: flex;
   flex-direction: row;
   gap: 32px;
   align-items: flex-end;
+}
+@media screen and (max-width: 425px) {
+  .blogs__content .blogs__content-headline .slider__title-navigation {
+    display: none;
+  }
 }
 .blogs__content .blogs__content-row {
   display: flex;
@@ -3033,12 +3326,22 @@ h6 {
 .blogs__content .blogs__content-row::-webkit-scrollbar {
   display: none;
 }
+@media screen and (max-width: 425px) {
+  .blogs__content .blogs__content-row {
+    gap: 24px;
+  }
+}
 .blogs__content .blogs__content-row .row__card {
   display: flex;
   flex-direction: column;
   width: 100%;
   max-width: 308px;
   gap: 24px;
+}
+@media screen and (max-width: 425px) {
+  .blogs__content .blogs__content-row .row__card {
+    max-width: 280px;
+  }
 }
 .blogs__content .blogs__content-row .row__card-desc {
   display: flex;
@@ -3284,6 +3587,12 @@ h6 {
     padding: 40px 16px;
   }
 }
+@media screen and (max-width: 425px) {
+  .newsletter-cta {
+    padding: 64px 16px;
+    gap: 48px;
+  }
+}
 .newsletter-cta .container {
   width: 100%;
 }
@@ -3297,6 +3606,11 @@ h6 {
 @media (max-width: 1200px) {
   .newsletter-cta__wrapper {
     flex-wrap: wrap;
+  }
+}
+@media screen and (max-width: 425px) {
+  .newsletter-cta__wrapper {
+    gap: 48px;
   }
 }
 .newsletter-cta__title {
