--- a/sass/aboutpage/_explore.scss
+++ b/sass/aboutpage/_explore.scss
@@ -12,6 +12,10 @@
     position: relative;
 
     padding: 96px 80px;
+
+    @media screen and (max-width: $bp-mobilelarge) {
+      padding: 64px 16px;
+    }
   }
 
   &__content {
@@ -20,6 +24,10 @@
     justify-content: center;
     position: relative;
     gap: 56px;
+
+    @media screen and (max-width: $bp-mobilelarge) {
+      gap: 56px;
+    }
 
     &-headline {
       display: flex;
@@ -46,6 +54,11 @@
         text-align: center;
 
         color: $content-color-dark-2;
+
+        @media screen and (max-width: $bp-mobilelarge) {
+          font-size: 40px;
+          max-width: 343px;
+        }
       }
     }
 
@@ -53,6 +66,10 @@
       display: flex;
       flex-direction: column;
       gap: 24px;
+
+      @media screen and (max-width: $bp-mobilelarge) {
+        gap: 28px;
+      }
 
       .slider__title {
         display: flex;
@@ -66,6 +83,10 @@
           letter-spacing: 120%;
           font-family: $font-primary;
           color: $content-color-dark-2;
+
+          @media screen and (max-width: $bp-mobilelarge) {
+            font-size: 32px;
+          }
         }
 
         &-navigation {
@@ -73,6 +94,10 @@
           flex-direction: row;
           align-items: center;
           gap: 32px;
+
+          @media screen and (max-width: $bp-mobilelarge) {
+            display: none;
+          }
         }
       }
 
@@ -81,6 +106,10 @@
         flex-direction: row;
         gap: 32px;
         overflow: auto;
+
+        @media screen and (max-width: $bp-mobilelarge) {
+          gap: 16px;
+        }
 
         &::-webkit-scrollbar {
           display: none;
@@ -91,11 +120,26 @@
           flex-direction: column;
 
           border: 1px solid $color-primary;
+
+          @media screen and (max-width: $bp-mobilelarge) {
+            width: 200px;
+          }
         }
 
         .product__image {
           height: 100%;
           max-height: 320px;
+
+          @media screen and (max-width: $bp-mobilelarge) {
+            width: 200px;
+            max-height: 210px;
+          }
+
+          .img-row {
+            @media screen and (max-width: $bp-mobilelarge) {
+              width: 200px;
+            }
+          }
         }
 
         .product__desc {
@@ -168,6 +212,7 @@
       align-items: center;
       align-self: center;
       gap: 10px;
+      cursor: pointer;
 
       width: 100%;
       height: 52px;
@@ -178,7 +223,7 @@
       font-size: 16px;
       color: $content-color-dark-2;
 
-      transition: all .3s;
+      transition: all 0.3s;
 
       &:hover {
         background-color: $content-color-light-2;
