--- a/sass/aboutpage/_ourteam.scss
+++ b/sass/aboutpage/_ourteam.scss
@@ -10,8 +10,11 @@
     flex-direction: column;
     justify-content: center;
     position: relative;
-
     padding: 96px 80px;
+
+    @media screen and (max-width: $bp-mobilelarge) {
+      padding: 64px 16px;
+    }
   }
 
   &__content {
@@ -19,21 +22,28 @@
     flex-direction: column;
     justify-content: center;
     position: relative;
-
     gap: 56px;
+
+    @media screen and (max-width: $bp-mobilelarge) {
+      gap: 48px;
+    }
 
     .team__headline {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      gap: 16px;
 
       &-main {
         font-size: 28px;
         font-weight: 300;
         line-height: 110%;
-
         color: $content-color-light-3;
+
+        @media screen and (max-width: $bp-mobilelarge) {
+          font-size: 24px;
+        }
       }
 
       &-sub {
@@ -42,18 +52,24 @@
         line-height: 120%;
         letter-spacing: 1%;
         text-align: center;
-
         width: 100%;
         max-width: 669.75px;
-
         color: $content-color-dark-2;
+
+        @media screen and (max-width: $bp-mobilelarge) {
+          font-size: 40px;
+        }
       }
     }
 
     .team__container {
-      display: flex;
-      flex-direction: row;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 32px;
+
+      @media screen and (max-width: $bp-mobilelarge) {
+        gap: 52px;
+      }
 
       &-row {
         display: flex;
@@ -73,8 +89,11 @@
             .name {
               font-size: 30px;
               line-height: 120%;
-
               color: $content-color-dark-2;
+
+              @media screen and (max-width: $bp-mobilelarge) {
+                font-size: 24px;
+              }
             }
 
             .contain {
@@ -86,7 +105,6 @@
             .position {
               font-size: 20px;
               line-height: 140%;
-
               color: $content-color-light-3;
             }
 
@@ -94,9 +112,7 @@
               position: relative;
               width: 24px;
               height: 24px;
-
               bottom: 50%;
-
               cursor: pointer;
             }
 
@@ -106,7 +122,6 @@
               position: absolute;
               background-color: $content-color-dark-2;
               border-radius: 20px;
-
               transition: all 0.2s;
             }
 
@@ -119,7 +134,6 @@
               will-change: transform;
             }
 
-            /* Garis vertikal */
             .icon::after {
               left: 50%;
               top: 50%;
@@ -140,11 +154,14 @@
             display: flex;
             flex-direction: column;
             gap: 18px;
-
             max-height: 0;
             opacity: 0;
             overflow: hidden;
             transition: max-height 0.4s ease, opacity 0.3s ease;
+
+            @media screen and (max-width: $bp-mobilelarge) {
+              gap: 16px;
+            }
 
             .desc-title {
               font-size: 16px;
@@ -157,7 +174,6 @@
               display: flex;
               flex-direction: row;
               gap: 18px;
-
               height: 32px;
 
               .social-icon {
@@ -168,10 +184,9 @@
 
           .team__card-desc.show {
             margin-bottom: 0;
-            max-height: 500px; /* cukup besar untuk muat isi */
+            max-height: 500px;
             opacity: 1;
           }
-          
 
           .sparation {
             flex: 0 0 1px;
