--- a/sass/aboutpage/_stats.scss
+++ b/sass/aboutpage/_stats.scss
@@ -1,5 +1,5 @@
 .stats {
-background-color: $content-color-light-3;
+  background-color: $content-color-light-3;
 
   .container {
     max-width: map-get($container-max-widths, xxl);
@@ -9,39 +9,69 @@ background-color: $content-color-light-3;
 
   &__wrapper {
     padding: 48px 128px;
+
+    @media screen and (max-width: $bp-smallest) {
+      padding: 48px 16px;
+    }
   }
 
   &__content {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 32px;
+
+    @media screen and (max-width: $bp-small) {
+      flex-direction: column;
+    }
+
+    .stats__content-col {
+      display: flex;
+      flex-direction: row;
+
+      width: 100%;
+      max-width: 501px;
+    }
 
     .stat__item {
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-        justify-items: center;
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+      justify-items: center;
+      align-self: center;
 
-        &-main {
-            font-size: 56px;
-            font-weight: 300;
-            font-family: $font-primary;
-            line-height: 120%;
-            letter-spacing: 1%;
+      width: 100%;
+      max-width: 250px;
 
-            align-self: center;
-            color: $content-color-light-1;
-            height: 68px;
-        }
+      @media screen and (max-width: $bp-small) {
+        padding: 24px;
+      }
 
-        &-sub {
-            font-size: 16px;
-            font-weight: 400;
-            line-height: 140%;
+      @media screen and (max-width: $bp-mobilelarge) {
+        padding: 0;
+      }
+      
 
-            color: $color-primary-light;
-        }
+      &-main {
+        font-size: 56px;
+        font-weight: 300;
+        font-family: $font-primary;
+        line-height: 120%;
+        letter-spacing: 1%;
+
+        align-self: center;
+        color: $content-color-light-1;
+        height: 68px;
+      }
+
+      &-sub {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 140%;
+
+        align-self: center;
+        text-align: center;
+        color: $color-primary-light;
+      }
     }
 
     .sparation__stat {
@@ -49,6 +79,11 @@ background-color: $content-color-light-3;
       height: 88px;
       background: $color-primary;
       align-self: center;
+
+      @media screen and (max-width: $bp-small) {
+        width: 100%;
+        height: 200px;
+      }
     }
   }
 }
