--- a/sass/aboutpage/_aboutus.scss
+++ b/sass/aboutpage/_aboutus.scss
@@ -32,6 +32,10 @@
           padding: 64px 80px 48px;
         }
 
+        @media screen and (max-width: $bp-smallest) {
+          padding: 64px 32px 48px;
+        }
+
         @media screen and (max-width: $bp-mobilelarge) {
           padding: 64px 16px 48px;
         }
@@ -137,6 +141,10 @@
           display: flex;
           flex-direction: column;
           padding: 0 80px;
+        }
+
+        @media screen and (max-width: $bp-smallest) {
+          padding: 0 32px;
         }
 
         @media screen and (max-width: $bp-mobilelarge) {
