--- a/sass/aboutpage/_explore.scss
+++ b/sass/aboutpage/_explore.scss
@@ -13,6 +13,10 @@
 
     padding: 96px 80px;
 
+    @media screen and (max-width: $bp-smallest) {
+      padding: 64px 32px;
+    }
+
     @media screen and (max-width: $bp-mobilelarge) {
       padding: 64px 16px;
     }
@@ -120,9 +124,14 @@
           flex-direction: column;
 
           border: 1px solid $color-primary;
+          transition: all 0.5s;
 
           @media screen and (max-width: $bp-mobilelarge) {
             width: 200px;
+          }
+
+          &:hover {
+            box-shadow: 0px 8px 32px rgba(0, 0, 0, 0.12);
           }
         }
 
