--- a/sass/aboutpage/_heroabout.scss
+++ b/sass/aboutpage/_heroabout.scss
@@ -11,6 +11,7 @@
     max-width: map-get($container-max-widths, xxl);
     margin: 0 auto;
     box-sizing: border-box;
+      overflow: hidden;
   }
 
   .heroabout-wrapper {
