--- a/sass/landingpage/_navbar.scss
+++ b/sass/landingpage/_navbar.scss
@@ -21,6 +21,11 @@
     justify-content: space-between;
     width: 595px;
 
+    @media screen and (max-width: $bp-medium) {
+      width: auto;
+      gap: 50px;
+    }
+
     @media screen and (max-width: $bp-small) {
       justify-content: flex-end;
       gap: 20px;
@@ -45,6 +50,11 @@
   gap: 48px;
   margin: 0;
   padding: 0;
+
+  @media screen and (max-width: $bp-medium) {
+    width: auto;
+    gap: 24px;
+  }
 }
 
 .menu__items {
