--- a/sass/aboutpage/_aboutus.scss
+++ b/sass/aboutpage/_aboutus.scss
@@ -189,6 +189,17 @@
           }
         }
 
+        .sparation_misivisi {
+          flex: 0 0 1px;
+          height: 308px;
+          background: $color-primary;
+          align-self: center;
+
+          @media screen and (max-width: $bp-small) {
+            width: 343px;
+          }
+        }
+
         .vision {
           display: flex;
           flex-direction: column;
