AboutPage Mobile Font fix

--- a/sass/aboutpage/_blogs.scss
+++ b/sass/aboutpage/_blogs.scss
@@ -118,6 +118,10 @@
             line-height: 120%;
             font-weight: 300;
             color: $content-color-dark-2;
+
+            @media screen and (max-width: $bp-mobilelarge) {
+              font-size: 24px;
+            }
           }
 
           .desc-sub {
