--- a/css/style.css
+++ b/css/style.css
@@ -2898,12 +2898,23 @@ h6 {
   padding: 24px;
   border-top: 1px solid #c8d8c0;
 }
+@media screen and (max-width: 425px) {
+  .explore__content-slider .slider__listing .product__desc {
+    padding: 16px;
+    gap: 8px;
+  }
+}
 .explore__content-slider .slider__listing .product__desc-name {
   font-weight: 300;
   font-size: 22px;
   line-height: 140%;
   text-transform: uppercase;
   color: #213721;
+}
+@media screen and (max-width: 425px) {
+  .explore__content-slider .slider__listing .product__desc-name {
+    font-size: 18px;
+  }
 }
 .explore__content-slider .slider__listing .product__desc-price {
   display: flex;
@@ -2916,10 +2927,20 @@ h6 {
   text-decoration: line-through;
   color: #899f87;
 }
+@media screen and (max-width: 425px) {
+  .explore__content-slider .slider__listing .product__desc-price .price__discount {
+    font-size: 18px;
+  }
+}
 .explore__content-slider .slider__listing .product__desc-price .price__fixed {
   font-size: 22px;
   font-weight: 700;
   color: #213721;
+}
+@media screen and (max-width: 425px) {
+  .explore__content-slider .slider__listing .product__desc-price .price__fixed {
+    font-size: 18px;
+  }
 }
 .explore__content-slider .slider__listing .product__desc-rating {
   display: flex;
@@ -2932,14 +2953,30 @@ h6 {
   flex-direction: row;
   gap: 4px;
 }
+@media screen and (max-width: 425px) {
+  .explore__content-slider .slider__listing .product__desc-rating .rating__star {
+    gap: 2px;
+  }
+}
 .explore__content-slider .slider__listing .product__desc-rating .rating__star .star {
   width: 20px;
   height: 20px;
+}
+@media screen and (max-width: 425px) {
+  .explore__content-slider .slider__listing .product__desc-rating .rating__star .star {
+    width: 16px;
+    height: 16px;
+  }
 }
 .explore__content-slider .slider__listing .product__desc-rating .rating__number {
   font-size: 22px;
   letter-spacing: 140%;
   color: #3c5e39;
+}
+@media screen and (max-width: 425px) {
+  .explore__content-slider .slider__listing .product__desc-rating .rating__number {
+    font-size: 16px;
+  }
 }
 .explore__content-button {
   display: flex;
@@ -3012,6 +3049,11 @@ h6 {
   font-size: 28px;
   font-weight: 300;
   color: #f2f6ef;
+}
+@media screen and (max-width: 425px) {
+  .value__content .value__item-desc .desc__main {
+    font-size: 24px;
+  }
 }
 .value__content .value__item-desc .desc__sub {
   font-size: 20px;
@@ -3413,6 +3455,12 @@ h6 {
   width: 100%;
   max-width: 501px;
 }
+@media screen and (max-width: 425px) {
+  .stats__content .stats__content-col {
+    height: 100%;
+    max-height: 149px;
+  }
+}
 .stats__content .stat__item {
   display: flex;
   flex-direction: column;
@@ -3442,6 +3490,11 @@ h6 {
   color: #f2f6ef;
   height: 68px;
 }
+@media screen and (max-width: 425px) {
+  .stats__content .stat__item-main {
+    font-size: 40px;
+  }
+}
 .stats__content .stat__item-sub {
   font-size: 16px;
   font-weight: 400;
@@ -3449,6 +3502,11 @@ h6 {
   align-self: center;
   text-align: center;
   color: #e4ece0;
+}
+@media screen and (max-width: 425px) {
+  .stats__content .stat__item-sub {
+    max-width: 147.5px;
+  }
 }
 .stats__content .sparation__stat {
   flex: 0 0 1px;
@@ -3460,6 +3518,11 @@ h6 {
   .stats__content .sparation__stat {
     width: 100%;
     height: 200px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .stats__content .sparation__stat {
+    height: 148px;
   }
 }
 
@@ -3578,6 +3641,11 @@ h6 {
   line-height: 120%;
   font-weight: 300;
   color: #213721;
+}
+@media screen and (max-width: 425px) {
+  .blogs__content .blogs__content-row .row__card-desc .desc-title {
+    font-size: 24px;
+  }
 }
 .blogs__content .blogs__content-row .row__card-desc .desc-sub {
   font-size: 18px;
