--- a/sass/aboutpage/_stats.scss
+++ b/sass/aboutpage/_stats.scss
@@ -30,6 +30,11 @@
 
       width: 100%;
       max-width: 501px;
+
+      @media screen and (max-width: $bp-mobilelarge) {
+        height: 100%;
+        max-height: 149px;
+      }
     }
 
     .stat__item {
@@ -49,7 +54,6 @@
       @media screen and (max-width: $bp-mobilelarge) {
         padding: 0;
       }
-      
 
       &-main {
         font-size: 56px;
@@ -61,6 +65,10 @@
         align-self: center;
         color: $content-color-light-1;
         height: 68px;
+
+        @media screen and (max-width: $bp-mobilelarge) {
+          font-size: 40px;
+        }
       }
 
       &-sub {
@@ -71,6 +79,10 @@
         align-self: center;
         text-align: center;
         color: $color-primary-light;
+
+        @media screen and (max-width: $bp-mobilelarge) {
+          max-width: 147.5px;
+        }
       }
     }
 
@@ -83,6 +95,10 @@
       @media screen and (max-width: $bp-small) {
         width: 100%;
         height: 200px;
+      }
+
+      @media screen and (max-width: $bp-mobilelarge) {
+        height: 148px;
       }
     }
   }
