--- a/sass/aboutpage/_value.scss
+++ b/sass/aboutpage/_value.scss
@@ -50,6 +50,10 @@
           font-size: 28px;
           font-weight: 300;
           color: $content-color-light-1;
+
+          @media screen and (max-width: $bp-mobilelarge) {
+            font-size: 24px;
+          }
         }
 
         .desc__sub {
