--- a/sass/aboutpage/_explore.scss
+++ b/sass/aboutpage/_explore.scss
@@ -27,7 +27,6 @@
     flex-direction: column;
     justify-content: center;
     position: relative;
-    gap: 56px;
 
     @media screen and (max-width: $bp-mobilelarge) {
       gap: 56px;
@@ -37,6 +36,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      padding-bottom: 56px;
       gap: 16px;
 
       .headline__main {
@@ -110,6 +110,7 @@
         flex-direction: row;
         gap: 32px;
         overflow: auto;
+        padding-bottom: 56px;
 
         @media screen and (max-width: $bp-mobilelarge) {
           gap: 16px;
@@ -162,6 +163,17 @@
           @media screen and (max-width: $bp-mobilelarge) {
             padding: 16px;
             gap: 8px;
+          }
+
+          .product__info {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            
+            @media screen and (max-width: $bp-mobilelarge) {
+              gap: 4px;
+            }
           }
 
           &-name {
